--- a/probot_anno_moveit_config/config/joint_limits.yaml
+++ b/probot_anno_moveit_config/config/joint_limits.yaml
@@ -4,31 +4,31 @@
 joint_limits:
   joint_1:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.9 #1.032
+    has_acceleration_limits: true
+    max_acceleration: 1
   joint_2:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.4 #0.452
+    has_acceleration_limits: true
+    max_acceleration: 1
   joint_3:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.5 #0.618
+    has_acceleration_limits: true
+    max_acceleration: 1
   joint_4:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.4 #0.494
+    has_acceleration_limits: true
+    max_acceleration: 1
   joint_5:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 0.4 #0.494
+    has_acceleration_limits: true
+    max_acceleration: 1
   joint_6:
     has_velocity_limits: true
-    max_velocity: 3
-    has_acceleration_limits: false
-    max_acceleration: 0
+    max_velocity: 1.2 #1.344
+    has_acceleration_limits: true
+    max_acceleration: 1
