Update PROBOT Anno demos

--- a/probot_anno_moveit_config/config/joint_limits.yaml
+++ b/probot_anno_moveit_config/config/joint_limits.yaml
@@ -4,31 +4,31 @@
 joint_limits:
   joint_1:
     has_velocity_limits: true
-    max_velocity: 0.9 #1.032
+    max_velocity: 2.9
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
   joint_2:
     has_velocity_limits: true
-    max_velocity: 0.4 #0.452
+    max_velocity: 0.47
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
   joint_3:
     has_velocity_limits: true
-    max_velocity: 0.5 #0.618
+    max_velocity: 1.75
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
   joint_4:
     has_velocity_limits: true
-    max_velocity: 0.4 #0.494
+    max_velocity: 1.4
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
   joint_5:
     has_velocity_limits: true
-    max_velocity: 0.4 #0.494
+    max_velocity: 1.75
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
   joint_6:
     has_velocity_limits: true
-    max_velocity: 1.2 #1.344
+    max_velocity: 3.0
     has_acceleration_limits: true
-    max_acceleration: 1
+    max_acceleration: 1.5
