--- a/probot_vision_pick/probot_ocr/package.xml
+++ b/probot_vision_pick/probot_ocr/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>probot_pick_place</name>
+  <name>probot_ocr</name>
   <version>0.0.0</version>
-  <description>The probot_pick_place package</description>
+  <description>The probot_ocr package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/probot_pick_place</url> -->
+  <!-- <url type="website">http://wiki.ros.org/probot_detect</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -51,33 +51,38 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+
   <build_depend>std_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+
+  <build_depend>message_generation</build_depend>
+
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+
+  <build_export_depend>cv_bridge</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+ <exec_depend>message_runtime</exec_depend>
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
-  <build_depend>moveit_core</build_depend>
-  <build_depend>moveit_ros_planning_interface</build_depend>
-
-  <exec_depend>moveit_core</exec_depend>
-  <exec_depend>moveit_ros_planning_interface</exec_depend>
-
-  <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
-
-  <build_depend>probot_vision</build_depend>
-  <exec_depend>probot_vision</exec_depend> 
-
-  <build_depend>probot_ocr</build_depend>
-  <exec_depend>probot_ocr</exec_depend> 
+  <!-- build_depend>probot_calibration</build_depend>
+  <exec_depend>probot_calibration</exec_depend --> 
 
 
 
-  <build_depend>probot_msgs</build_depend>
-  <exec_depend>probot_msgs</exec_depend> 
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
