--- a/probot_msgs/CMakeLists.txt
+++ b/probot_msgs/CMakeLists.txt
@@ -70,6 +70,11 @@ add_message_files(
 #   Service2.srv
 # )
 
+add_service_files(
+  FILES
+  HeartbeatSrv.srv
+)
+
 ## Generate actions in the 'action' folder
 # add_action_files(
 #   FILES
