--- a/probot_vision_pick/probot_ocr/package.xml
+++ b/probot_vision_pick/probot_ocr/package.xml
@@ -56,6 +56,8 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>tf</build_depend>
 
   <build_depend>message_generation</build_depend>
 
@@ -76,6 +78,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>image_transport</exec_depend>
+  <exec_depend>tf</exec_depend>
 
   <!-- build_depend>probot_calibration</build_depend>
   <exec_depend>probot_calibration</exec_depend --> 
