--- a/probot_demo/package.xml
+++ b/probot_demo/package.xml
@@ -53,6 +53,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>probot_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -60,6 +61,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>moveit_core</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>probot_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
